
              pbmreduce: add -randomseed.

              anytopnm, pnmmargin, pnmquant, ppmquant, pnmquantall, pgmcrater,
              ppmfade, ppmrainbow, ppmshadow, pbmtox10bm, pamstretch-gen:
              Add -version.

              fiascotopnm: change -version to include Netpbm version.

              hpcdtoppm dummy version: update web link to real version.

              ppmhist: fix incorrect color names.  Introduced in
              Netpbm 10.19 (November 2003).

              ppmshadow: fix bug: don't ignore invalid option.  Introduced in
              Netpbm 10.9 (September 2002).

              pnmpaste: fix possible invalid memory access.  Introduced in
              Netpbm 1.44 (September 2008).

              pbmreduce: fix undefined behavior when scale factor argument is
              too big.  Always present (pbmreduce was new in September 1989).

              pbmtext: Fix bug: invalid memory reference when text contains
              code points > 127.  Broken in 10.74.

              cameratopam: fix invalid memory reference; effect unknown.
              Introduced in Netpbm 10.68 (September 2014).

              Install on Windows: fix backward compatibility symlinks for
              pnmtoplainpnm, pnmquantall.

              Build: Remove use of strndup so it compiles on Mac OS X 10.6.
              Broken in 10.74.

              Build: Remove use of isfinite so it compiles with C89 standard
              compiler.

16.03.27 BJH  Release 10.74.00

              pbmtext: produce same image when you run pbmtext with -width
              explicitly set to the width you get when you don't specify
              width.

              pbmtext: ignore -nomargins when -width is specified.

              pbmtext: report when line ends are dropped because of
              truncation.

              pbmtext: Fix bug: if input has a code point that is not in the
              font, Pbmtext substitutes space, but behavior is undefined if